--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -24,7 +24,8 @@
 .hero-profile-text{
   position: relative;
   padding-bottom: 48px;
-  margin-top: -113px;
+  /*margin-top: -113px;*/
+  margin-top: -97px;
   @media #{$brk-tablet}{
   margin-top: 0px;
   padding-bottom: 0px;
